Ajoute le style pour aligner correctement les choix
quand il y a un audio et un intitulé (svg pour les couleurs)

--- a/src/situations/commun/styles/formulaire_qcm.scss
+++ b/src/situations/commun/styles/formulaire_qcm.scss
@@ -52,6 +52,7 @@
     .bouton-lecture {
       button {
         margin-right: 1rem;
+        display: flex;
       }
     }
   }
@@ -72,6 +73,7 @@
   }
 
   &-reponse-intitule {
+    display: flex;
     margin-left: 1rem;
     cursor: pointer;
   }
